@@ -1,3 +1,6 @@
+Changelog 0.3.12 [20230204]:
+- Fix lang error
+
 Changelog 0.3.11 [20230204]:
 - Fix source select not showing anime titles
 
